// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - default - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "default_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.inputStyle: CSS style applied - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - properties.inputStyle: CSS style applied - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-1t3g54r",
      "disabled": false,
      "dots": true,
      "id": "properties.inputStyle: CSS style applied_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - properties.title - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "properties.title_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.color: # - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.color: # - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-k4pdw5 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.color: #_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.disableIcons: true - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.disableIcons: true - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.disableIcons: true_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.disableNotApplicable: true - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.disableNotApplicable: true - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.disableNotApplicable: true_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.disabled: true - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.disabled: true - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": true,
      "dots": true,
      "id": "property.disabled: true_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label align: right - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.label align: right - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.label align: right_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label colon: false - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.label colon: false - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.label colon: false_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label disabled: true - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.label disabled: true - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.label disabled: true_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label extra: extra text added - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.label extra: extra text added - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.label extra: extra text added_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label inline: true - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.label inline: true - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.label inline: true_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label span: 5 - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.label span: 5 - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.label span: 5_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.max: 14 - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.max: 14 - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.max: 14_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "11": Object {
          "label": <strong>
            11
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "12": Object {
          "label": <strong>
            12
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "13": Object {
          "label": <strong>
            13
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "14": Object {
          "label": <strong>
            14
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 14,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.maxIcon: SmileTwoTone - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.maxIcon: SmileTwoTone - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.maxIcon: SmileTwoTone_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.min: 3 - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.min: 3 - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.min: 3_input",
      "marks": Object {
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": 2,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": 2,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.minIcon: MehTwoTone - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.minIcon: MehTwoTone - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.minIcon: MehTwoTone_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.notApplicableLabel: Not Applicable - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.notApplicableLabel: Not Applicable - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.notApplicableLabel: Not Applicable_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.showDots: false - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.showDots: false - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": false,
      "id": "property.showDots: false_input",
      "marks": undefined,
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.showMarks: false - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.showMarks: false - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.showMarks: false_input",
      "marks": undefined,
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.step: 2 - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.step: 2 - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.step: 2_input",
      "marks": Object {
        "-2": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -2,
      "onChange": [Function],
      "range": false,
      "step": 2,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -2,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.tooltipVisible: always - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.tooltipVisible: always - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.tooltipVisible: always_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.tooltipVisible: never - value[0] - Checkbox 1`] = `Array []`;

exports[`Mock render - property.tooltipVisible: never - value[0] - Slider 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "className": "css-0 css-ljjwvb css-0",
      "disabled": false,
      "dots": true,
      "id": "property.tooltipVisible: never_input",
      "marks": Object {
        "-1": Object {
          "label": <span />,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "0": Object {
          "label": <strong>
            0
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "1": Object {
          "label": <strong>
            1
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "10": Object {
          "label": <strong>
            10
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "2": Object {
          "label": <strong>
            2
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "3": Object {
          "label": <strong>
            3
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "4": Object {
          "label": <strong>
            4
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "5": Object {
          "label": <strong>
            5
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "6": Object {
          "label": <strong>
            6
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "7": Object {
          "label": <strong>
            7
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "8": Object {
          "label": <strong>
            8
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
        "9": Object {
          "label": <strong>
            9
          </strong>,
          "style": Object {
            "fontSize": 12,
            "marginTop": 2,
          },
        },
      },
      "max": 10,
      "min": -1,
      "onChange": [Function],
      "range": false,
      "step": 1,
      "tipFormatter": [Function],
      "tooltipVisible": false,
      "value": -1,
    },
    Object {},
  ],
]
`;
